gcc/testsuite/rust/compile/issue-3625.rs
#![feature(no_core)]
#![no_core]

type A = crate::A;
// { dg-error "failed to resolve type path segment: .A." "" { target *-*-* } .-1 }
